fix(VSelects): always truncate selection text (#17688)
fixes #17627

--- a/packages/vuetify/src/components/VCombobox/VCombobox.sass
+++ b/packages/vuetify/src/components/VCombobox/VCombobox.sass
@@ -18,19 +18,22 @@
         align-self: flex-start
         flex: 1 1
 
-  .v-field:not(.v-field--focused)
+  .v-field
     input
-      min-width: 0
+      min-width: $combobox-focused-input
+
+    &:not(.v-field--focused)
+      input
+        min-width: 0
 
   .v-field--dirty
     .v-combobox__selection
       margin-inline-end: 2px
 
-  .v-field--single-line
-    .v-combobox__selection-text
-      overflow: hidden
-      text-overflow: ellipsis
-      white-space: nowrap
+  .v-combobox__selection-text
+    overflow: hidden
+    text-overflow: ellipsis
+    white-space: nowrap
 
 .v-combobox
   &__content
@@ -47,7 +50,7 @@
     align-items: center
     letter-spacing: inherit
     line-height: inherit
-    max-width: 100%
+    max-width: 90%
 
   &__selection
     margin-top: var(--v-input-chips-margin-top)
